# monarch-cli

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  publish.yml
.tickets/: mc-0136.md  mc-0902.md  mc-0c0a.md  mc-0e26.md  mc-0ed9.md  mc-1568.md  mc-2042.md  mc-27a3.md  mc-299b.md  mc-3437.md  mc-3aa3.md  mc-3eba.md  mc-3f7c.md  mc-4c28.md  mc-4d55.md  mc-52c3.md  mc-5421.md  mc-5655.md  mc-57e8.md  mc-5db8.md  mc-5db9.md  mc-6397.md  mc-6a5b.md  mc-73e3.md  mc-78e5.md  mc-79ca.md  mc-7bd9.md  mc-7e2e.md  mc-7fb9.md  mc-7fda.md  mc-804c.md  mc-8834.md  mc-8d99.md  mc-9441.md  mc-96b1.md  mc-99cb.md  mc-a185.md  mc-a23d.md  mc-a575.md  mc-a5b0.md  (+19 more)
docs/: RELEASING.md
plans/: RELEASE-READINESS-v0.1.0.md  first-pass-plan-review-gpt.md  first-pass-plan-review-opus.md  monarch-cli-implementation-plan.md  plan-simplify-gpt-pro.md  plan-simplify-opus.md
scripts/: release.sh
src/monarch_cli/: __init__.py  main.py
tests/: __init__.py  conftest.py  test_placeholder.py  test_schemas.py
tests/commands/: test_accounts.py  test_agent_ergonomics.py  test_api.py  test_auth.py  test_budgets.py  test_capabilities.py  test_cashflow.py  test_categories.py  test_investments.py  test_transactions.py
tests/core/: test_adapter.py  test_async_utils.py  test_client_interface.py  test_config.py  test_dates.py  test_error_handler.py  test_exceptions.py  (+2 more)
(+70 files in other folders)
