[project]
name = "monarch-cli"
version = "0.1.0"
description = "CLI wrapper around monarchmoneycommunity for AI agent integration with Monarch Money"
readme = "README.md"
authors = [
    { name = "cc-vps", email = "crcatala+vps@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "typer[all]>=0.9.0",
    "monarchmoneycommunity>=1.0.0",
    "keyring>=24.0.0",
    "rich>=13.0.0",
    "platformdirs>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
monarch = "monarch_cli.main:app"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "ARG", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
